--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   max-width: 100vw;
   width: 100%;
-  font-family: "Montserrat";
 }
 
 *,
@@ -18,7 +17,9 @@ ul {
 }
 
 .container {
-  width: 1260px;
+  margin: auto;
+  width: 100%;
+  max-width: 1280px;
   padding: 40px 20px;
 }
 
@@ -27,42 +28,38 @@ button {
   cursor: pointer;
 }
 
-.rooms-list {
-  height: 300px;
+.list {
+  height: 50vh;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
 }
 
-.rooms-list__item {
-  max-width: 600px;
-  min-width: 49.02%;
-  margin-bottom: 24px;
+.list__item {
+  width: 100%;
+  height: 100%;
+  min-width: 50vw;
+  margin: 0;
+  padding: 2%;
+}
+
+.list__item_inner {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 30px;
   background-color: rgb(64, 238, 212);
+  font-size: 30px;
 }
 
-.rooms-list__item:nth-child(2n+1) {
-  margin-right: 1.96%;
-}
-
-.fidback__controller {
+.arrows {
   align-self: center;
-  margin-top: 40px;
+  margin: 0 auto;
   width: 150px;
-  height: 80px;
-  background-image: url("/assets/logos/fidback_user_icon.svg");
-  background-position: center;
-  background-repeat: no-repeat;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-
 }
 
-.fidback__controller button {
-  width: 16px;
-  height: 36px;
+.arrows button {
+  font-size: 50px;
 }
